--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1109,6 +1109,7 @@ ul.list
                 top - 0.5em
                 left 1.11em !important
                 font-size 0.778em
+                //transform scale(0.778) 
     &__message
         font-size 0.69em
         color #696969
@@ -2085,24 +2086,31 @@ ul.list
 .cases
     width 100%
     margin-bottom 40px
-    display flex
-    flex-wrap wrap
+    &__items
+        display flex
+        flex-wrap wrap
     &__item
-        border-radius 4px 4px 0 0
+        overflow hidden
+        border-radius 4px
         //max-width 1160px
         margin 20px auto 
         width 100%
         @media (min-width 600px)
             width calc(50% - 20px)
+            margin 20px 10px 
         //border-radius 5px
         background-image url(../images/cases__item.png), linear-gradient( 107deg, rgba(214,227,254,.3) 0%, rgba(201,199,199,.3) 78%, rgba(213,213,213,.3) 100%)
         @media (min-width 900px)
             width 100%
-            display flex
-            border-radius 4px 0 0 4px
-            //flex-wrap wrap
+            display grid
+            grid-template-areas 'body image'
+            grid-template-columns 70% 30%
+            &:nth-child(2n)
+                grid-template-areas 'image body'
+                grid-template-columns 30% 70%
     &__body
         padding 20px
+        grid-area body
     &__title
         font-size 20px
         line-height 1.2em
@@ -2122,16 +2130,15 @@ ul.list
             margin-bottom 5px
             margin-top 20px
     &__img
+        grid-area image
         position relative
         line-height 0
         img
+            border-radius 0
             margin 0
-            border-radius 0 0 4px 4px
             height 100%
         @media (min-width 900px)
             width auto
-            img 
-                border-radius 0 4px 4px 0
        // background #000
     &__btn
         width max-content
@@ -2139,3 +2146,21 @@ ul.list
         bottom 30px
         left 50%
         transform translateX(-50%)
+
+.price
+    @media (min-width 900px)
+        display grid
+        grid-template-areas 'stage1 stage2 stage3'
+        // grid-template-columns 20% 60% 20%
+    @media (min-width 1160px)
+        margin auto
+        width 1160px
+    &__form
+        margin-top 10px
+    &__item
+        &:nth-child(1)
+            grid-area stage1
+        &:nth-child(2)
+            grid-area stage3
+        &:nth-child(3)
+            grid-area stage2
