--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -490,8 +490,7 @@ block content
                                                 .input__box
                                                     .input__top-border
                                                     .input__title Длина трубопровода
-                                                    //- .input__icon
-                                                    input(name='a').input__control
+                                                    input(name='a' data-postfix=" метров" data-grid-num="6" data-min="0" data-max="500" data-from="200" data-grid="true").input__control.range-slider
                                                 .input__message(data-default="")
                                         .form-box__item
                                             .input
@@ -515,7 +514,7 @@ block content
                                                     .input__top-border
                                                     .input__title Кол-во колодцев
                                                     //- .input__icon
-                                                    input(name='a').input__control
+                                                    input(name='v' data-min="1" data-max="10" data-from="1" data-max-postfix="+").input__control.range-slider
                                                 .input__message(data-default="Кол-во колодцев, которые необходимо строить")
                                         .form-box__item
                                             .input
@@ -531,7 +530,7 @@ block content
                                                     .input__top-border
                                                     .input__title Материал магистральной трубы
                                                     //- .input__icon
-                                                    input(name='a').input__control
+                                                    input(name='v'  data-from="1" data-values="Металл, ПВХ, ПВДФ, РЕХ" data-grid="true").input__control.range-slider
                                                 .input__message(data-default="Диаметр и материал магистральной трубы")
                                         .form-box__item
                                             .input.input_type_name
