--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -2182,3 +2182,201 @@ ul.list
         border-top none
         border-radius 0 0 8px 8px
         padding 10px
+
+
+
+.irs
+    position relative
+    display block
+    user-select none
+    font-size 12px
+    font-family Arial, sans-serif
+
+.irs-line
+    position relative
+    display block
+    overflow hidden
+    outline none !important
+
+.irs-bar
+    position absolute
+    display block
+    left 0
+    width 0
+
+.irs-shadow
+    position absolute
+    display none
+    left 0
+    width 0
+
+.irs-handle
+    position absolute
+    display block
+    box-sizing border-box
+    cursor default
+    z-index 1
+    &.type_last
+        z-index 2
+
+.irs-min
+.irs-max
+    position absolute
+    display block
+    cursor default
+.irs-min
+    left 0
+
+.irs-max
+    right 0
+
+.irs-from
+.irs-to
+.irs-single
+    position absolute
+    display block
+    top 0
+    left 0
+    cursor default
+    white-space nowrap
+
+.irs-grid
+    position absolute
+    display none
+    bottom 0
+    left 0
+    width 100%
+    height 20px
+
+.irs-with-grid
+    .irs-grid
+        display block
+
+.irs-grid-pol
+    position absolute
+    top 0
+    left 0
+    width 1px
+    height 8px
+    background #000
+    &.small
+        height 4px
+
+.irs-grid-text
+    position absolute
+    bottom 0
+    left 0
+    white-space nowrap
+    text-align center
+    font-size 9px
+    line-height 9px
+    padding 0 3px
+    color #000
+
+.irs-disable-mask
+    position absolute
+    display block
+    top 0
+    left -1%
+    width 102%
+    height 100%
+    cursor default
+    background rgba(0, 0, 0, 0)
+    z-index 2
+
+.irs-disabled
+    opacity 0.4
+
+.irs-hidden-input
+    position absolute !important
+    display block !important
+    top 0 !important
+    left 0 !important
+    width 0 !important
+    height 0 !important
+    font-size 0 !important
+    line-height 0 !important
+    padding 0 !important
+    margin 0 !important
+    overflow hidden
+    outline none !important
+    z-index -9999 !important
+    background none !important
+    border-style solid !important
+    border-color transparent !important
+
+.irs--round
+    height 50px
+    margin-top 5px
+    &.irs-with-grid
+        height 65px
+    .irs-line
+        top 36px
+        height 4px
+        background-color #dee4ec
+        border-radius 4px
+    .irs-bar
+        top 36px
+        height 4px
+        background-color #2b519e 
+    .irs-bar--single
+        border-radius 4px 0 0 4px
+    .irs-shadow
+        height 4px
+        bottom 21px
+        background-color rgba(222, 228, 236, 0.5)
+    .irs-handle
+        top 26px
+        width 24px
+        height 24px
+        border 4px solid #2b519e
+        background-color white
+        border-radius 24px
+        box-shadow 0 1px 3px rgba(0, 0, 255, 0.3)
+    .irs-grid
+        height 25px
+    .irs-grid-pol
+        background-color #dedede
+    .irs-grid-text
+        color silver
+        font-size 13px
+
+.irs--round .irs-handle.state_hover
+.irs--round .irs-handle:hover
+    background-color #f0f6ff
+
+.irs--round .irs-min
+.irs--round .irs-max
+    color #333
+    font-size 14px
+    line-height 1
+    top 0
+    padding 3px 5px
+    background-color rgba(0, 0, 0, 0.1)
+    border-radius 4px
+
+.irs--round .irs-from
+.irs--round .irs-to
+.irs--round .irs-single
+    font-size 14px
+    line-height 1
+    text-shadow none
+    padding 3px 5px
+    background-color #d6dcf5
+    color #444
+    border-radius 4px
+
+.irs--round .irs-from:before
+.irs--round .irs-to:before
+.irs--round .irs-single:before
+    position absolute
+    display block
+    content ""
+    bottom -6px
+    left 50%
+    width 0
+    height 0
+    margin-left -3px
+    overflow hidden
+    border 3px solid transparent
+    border-top-color #d6dcf5
