--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1642,6 +1642,12 @@ ul.list
         line-height 1.3em
         color #555
         margin-bottom 30px
+    &__label
+        font-size 18px
+        line-height 1.3em
+        color #000
+        border-width 600
+        margin-bottom 10px
     &__wrapper
         //display table
         // box-shadow 0px 4px 20px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 2px rgba(195, 195, 195, 0.09)
@@ -2151,8 +2157,8 @@ ul.list
 .price
     @media (min-width 1000px)
         display grid
-        grid-template-areas 'stage1 stage2 stage3'
-        grid-template-columns calc(50% / 2) 50% calc(50% / 2)
+        grid-template-areas 'stage1 stage2 ' 'stage3  stage2'
+        grid-template-columns calc(20%) 80%
     @media (min-width 1160px)
         margin auto
         width 1160px
@@ -2165,6 +2171,12 @@ ul.list
             grid-area stage3
         &:nth-child(3)
             grid-area stage2
+            padding 0 10px
+    &__grup
+        display flex
+        justify-content space-between
+        .input
+            width calc(50% - 5px) !important
     &__title
         background #ddd
         padding 10px
@@ -2190,7 +2202,6 @@ ul.list
     display block
     user-select none
     font-size 12px
-    font-family Arial, sans-serif
 
 .irs-line
     position relative
@@ -2260,7 +2271,7 @@ ul.list
     height 8px
     background #000
     &.small
-        height 4px
+        height 0
 
 .irs-grid-text
     position absolute
@@ -2311,28 +2322,27 @@ ul.list
     &.irs-with-grid
         height 65px
     .irs-line
-        top 36px
-        height 4px
+        top 37px
+        height 3px
         background-color #dee4ec
-        border-radius 4px
+        border-radius 5px
     .irs-bar
-        top 36px
-        height 4px
+        top 37px
+        height 3px
         background-color #2b519e 
     .irs-bar--single
-        border-radius 4px 0 0 4px
+        border-radius 5px 0 0 5px
     .irs-shadow
         height 4px
         bottom 21px
         background-color rgba(222, 228, 236, 0.5)
     .irs-handle
-        top 26px
-        width 24px
-        height 24px
-        border 4px solid #2b519e
-        background-color white
-        border-radius 24px
-        box-shadow 0 1px 3px rgba(0, 0, 255, 0.3)
+        top 28px
+        width 20px
+        height 20px
+        border 3px solid #2b519e
+        background-color #fff
+        border-radius 20px
     .irs-grid
         height 25px
     .irs-grid-pol
@@ -2341,16 +2351,16 @@ ul.list
         color silver
         font-size 13px
 
-.irs--round .irs-handle.state_hover
-.irs--round .irs-handle:hover
-    background-color #f0f6ff
+// .irs--round .irs-handle.state_hover
+// .irs--round .irs-handle:hover
+//     //background-color #f0f6ff
 
 .irs--round .irs-min
 .irs--round .irs-max
     color #333
     font-size 14px
     line-height 1
-    top 0
+    top 2px
     padding 3px 5px
     background-color rgba(0, 0, 0, 0.1)
     border-radius 4px
@@ -2363,8 +2373,8 @@ ul.list
     text-shadow none
     padding 3px 5px
     background-color #d6dcf5
-    color #444
-    border-radius 4px
+    color #333
+    border-radius 2px
 
 .irs--round .irs-from:before
 .irs--round .irs-to:before
